@@ -42,7 +42,7 @@ var lmsBrowse = Vue.component("lms-browse", {
   </v-layout>
   <v-layout v-else>
    <v-btn flat icon @click="homeBtnPressed()" class="toolbar-button" id="home-button"><v-icon>home</v-icon></v-btn>
-   <v-btn flat icon v-longpress="backBtnPressed" class="toolbar-button" id="back-button"><v-icon>arrow_back</v-icon></v-btn>
+   <v-btn flat icon @click="backBtnPressed()" class="toolbar-button" id="back-button"><v-icon>arrow_back</v-icon></v-btn>
    <v-layout row wrap @click="showHistory($event)" v-if="headerSubTitle" v-bind:class="{pointer : history.length>1}">
     <v-flex xs12 class="ellipsis subtoolbar-title subtoolbar-pad">{{headerTitle}}</v-flex>
     <v-flex xs12 class="ellipsis subtoolbar-subtitle subtext">{{current && current.id==TOP_MYMUSIC_ID && libraryName ? libraryName : headerSubTitle}}</v-flex>
@@ -1487,13 +1487,9 @@ var lmsBrowse = Vue.component("lms-browse", {
                 this.goBack();
             }
         },
-        backBtnPressed(long) {
+        backBtnPressed() {
             if (this.$store.state.visibleMenus.size<1) {
-                if (long) {
-                    this.goHome();
-                } else {
-                    this.goBack();
-                }
+                this.goBack();
             }
         },
         goBack(refresh) {
